<resources>
    <string name="app_name">Dream Destinations</string>
    <string name="action_favourite">Favourite</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="planeimage">planeImage</string>
    <string name="fromLabel">Flying From:</string>
    <string name="toLabel">Landing At:</string>
    <string name="permission_rationale">Permission Rationale</string>
    <string name="permission_denied_explanation">Permission denied explanation</string>
    <string name="settings">settings</string>
    <string name="no_location">No Location Detected. Please turn on location services.</string>
    <string name="no_location_services">Please turn on location services.</string>
    <string name="nearby_airports">Nearby Airports</string>
    <string name="depart_date">Depart Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="select_depart_date">Select Depart Date</string>
    <string name="select_arrival_date">Select Arrival Date</string>
    <string name="find_flights">Find Flights</string>
</resources>